# Enterprise-Dash-Board

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
attached_assets/: Design_Enterprise_OS_Dashboard_1781259125890.make  Pasted--PROMPT-1-Fix-Workflow-Editor-Coming-Soon-Real-Prototyp_1781460111988.txt  Pasted--PROMPT-3-Fix-Hardcoded-Attendance-Analytics-Add-Lightw_1781460906674.txt  Pasted-Analyze-the-existing-Enterprise-OS-AI-Copilot-architect_1781456900118.txt  Pasted-Analyze-the-existing-Enterprise-OS-analytics-architectu_1781449269604.txt  Pasted-Analyze-the-existing-Enterprise-OS-architecture-first-b_1781416890409.txt  Pasted-Analyze-the-existing-Enterprise-OS-frontend-architectur_1781445954821.txt  Pasted-Analyze-the-existing-Enterprise-OS-frontend-architectur_1781457472163.txt  Pasted-Build-a-complete-modern-full-stack-enterprise-SaaS-prot_1781255891137.txt  Pasted-ENTERPRISE-OS-ADVANCED-EMPLOYEE-EXPERIENCE-ENTERPRISE-W_1781283076654.txt  Pasted-The-Enterprise-OS-architecture-is-now-stable-with-RBAC-_1781378771307.txt  Pasted-The-Enterprise-OS-platform-is-now-stable-with-RBAC-scop_1781379893087.txt  Pasted-The-Enterprise-OS-platform-is-now-stable-with-RBAC-scop_1781381037371.txt  Pasted-The-Leave-Approval-Workflow-system-is-now-stable-and-op_1781377192086.txt  Pasted-The-RBAC-system-is-now-stable-and-working-correctly-Now_1781376057550.txt  Pasted-The-RBAC-system-workflow-engine-notifications-and-activ_1781378096039.txt  Pasted-The-backend-RBAC-implementation-is-now-stable-Now-safel_1781374490768.txt  (+1 more)
backend/: .env.example  enterprise_os.db
(+71 files in other folders)
